--- a/ExternalLookup/docker-compose.yaml
+++ b/ExternalLookup/docker-compose.yaml
@@ -10,9 +10,10 @@ services:
         - GITHUB_ACTOR
     environment:
       KAFKA__URL: kafka:19092
-      KAFKA__CLIENTID: ClientId
-      KAFKA__CLIENTSECRET: 1234
-      KAFKA__AUTHENDPOINT: http://cheetahoauthsimulator/oauth2/token
+      KAFKA__OAUTH2__CLIENTID: default-access
+      KAFKA__OAUTH2__CLIENTSECRET: default-access-secret
+      KAFKA__OAUTH2__SCOPE: kafka
+      KAFKA__OAUTH2__TOKENENDPOINT: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
     depends_on:
       externallookup-job:
         condition: service_healthy
@@ -35,14 +36,15 @@ services:
       --input-kafka-topic ExternalLookupInputTopic
       --output-kafka-topic ExternalLookupOutputTopic
     environment:
-      KAFKA_CLIENT_ID: ClientId
-      KAFKA_CLIENT_SECRET: 1234
-      KAFKA_TOKEN_URL: http://cheetahoauthsimulator/oauth2/token
+      KAFKA_CLIENT_ID: default-access
+      KAFKA_CLIENT_SECRET: default-access-secret
+      KAFKA_SCOPE: kafka
+      KAFKA_TOKEN_URL: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
       ID_SERVICE_URL: http://id-service:80/
-      ID_SERVICE_TOKEN_URL: http://cheetahoauthsimulator/oauth2/token
-      ID_SERVICE_CLIENT_ID: testId
-      ID_SERVICE_CLIENT_SECRET: testSecret
-      ID_SERVICE_SCOPE: testScope
+      ID_SERVICE_TOKEN_URL: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
+      ID_SERVICE_CLIENT_ID: default-access
+      ID_SERVICE_CLIENT_SECRET: default-access-secret
+      ID_SERVICE_SCOPE: openid
       FLINK_PROPERTIES: |
         jobmanager.rpc.address: externallookup-job
         scheduler-mode: reactive
