--- a/SerializationErrorCatch/ComponentTest/SerializationErrorCatch.ComponentTest.csproj
+++ b/SerializationErrorCatch/ComponentTest/SerializationErrorCatch.ComponentTest.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.ComponentTest" Version="1.6.3" />
+        <PackageReference Include="cheetah.kafka" Version="0.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="xunit" Version="2.6.4" />
