--- a/TransformAndStore/ComponentTest/TransformAndStore.ComponentTest.csproj
+++ b/TransformAndStore/ComponentTest/TransformAndStore.ComponentTest.csproj
@@ -8,7 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.ComponentTest" Version="1.6.3" />
+        <PackageReference Include="Cheetah.Kafka" Version="0.1.0" />
+        <PackageReference Include="Cheetah.OpenSearch" Version="0.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="xunit" Version="2.6.4" />
