Use appsettings.json as local configuration for all examples

--- a/EnrichStream/ComponentTest/EnrichStream.ComponentTest.csproj
+++ b/EnrichStream/ComponentTest/EnrichStream.ComponentTest.csproj
@@ -22,4 +22,10 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
