--- a/ExternalLookup/ComponentTest/ExternalLookup.ComponentTest.csproj
+++ b/ExternalLookup/ComponentTest/ExternalLookup.ComponentTest.csproj
@@ -22,4 +22,10 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
