--- a/JsonToAvro/ComponentTest/jsonToAvro.ComponentTest.csproj
+++ b/JsonToAvro/ComponentTest/jsonToAvro.ComponentTest.csproj
@@ -23,4 +23,10 @@
         <PackageReference Include="Apache.Avro" Version="1.11.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
