--- a/TransformAndStore/ComponentTest/TransformAndStore.ComponentTest.csproj
+++ b/TransformAndStore/ComponentTest/TransformAndStore.ComponentTest.csproj
@@ -23,4 +23,10 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
