Upgrade all examples to dotnet 8

--- a/FlinkStates/ComponentTest/Dockerfile
+++ b/FlinkStates/ComponentTest/Dockerfile
@@ -1,17 +1,19 @@
-﻿FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
-WORKDIR /app
-
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 WORKDIR /src
+RUN chown -R app:app /src
 COPY "NuGet-CI.Config" "NuGet.Config"
 COPY . .
+
+USER app
 RUN \
-    --mount=type=secret,id=GITHUB_ACTOR \
-    --mount=type=secret,id=GITHUB_TOKEN \
+    --mount=type=secret,id=GITHUB_ACTOR,uid=$APP_UID \
+    --mount=type=secret,id=GITHUB_TOKEN,uid=$APP_UID \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     dotnet restore "FlinkStates.ComponentTest.csproj"
 
-USER $APP_UID
+## Only here for readability and convention
+USER app 
+
 ENTRYPOINT ["dotnet","test", "FlinkStates.ComponentTest.csproj", "--no-restore"]
