--- a/ExternalLookup/ComponentTest/Dockerfile
+++ b/ExternalLookup/ComponentTest/Dockerfile
@@ -1,16 +1,19 @@
-﻿FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
-WORKDIR /app
-
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 WORKDIR /src
+RUN chown -R app:app /src
 COPY "NuGet-CI.Config" "NuGet.Config"
 COPY . .
-RUN --mount=type=secret,id=GITHUB_ACTOR \
-    --mount=type=secret,id=GITHUB_TOKEN \
+
+USER app
+RUN \
+    --mount=type=secret,id=GITHUB_ACTOR,uid=$APP_UID \
+    --mount=type=secret,id=GITHUB_TOKEN,uid=$APP_UID \
     GITHUB_ACTOR="$(cat /run/secrets/GITHUB_ACTOR)" \
     GITHUB_TOKEN="$(cat /run/secrets/GITHUB_TOKEN)" \
     dotnet restore "ExternalLookup.ComponentTest.csproj"
 
-USER $APP_UID
+## Only here for readability and convention
+USER app 
+
 ENTRYPOINT ["dotnet","test", "ExternalLookup.ComponentTest.csproj", "--no-restore"]
