--- a/SerializationErrorCatch/ComponentTest/SerializationErrorCatch.ComponentTest.csproj
+++ b/SerializationErrorCatch/ComponentTest/SerializationErrorCatch.ComponentTest.csproj
@@ -3,12 +3,11 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="cheetah.kafka" Version="0.1.0" />
+        <PackageReference Include="Cheetah.Kafka" Version="0.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="xunit" Version="2.6.6" />
