--- a/SqlApplicationMode/docker-compose.yaml
+++ b/SqlApplicationMode/docker-compose.yaml
@@ -13,9 +13,9 @@ services:
       KAFKA__OAUTH2__CLIENTSECRET: default-access-secret
       KAFKA__OAUTH2__SCOPE: kafka
       KAFKA__OAUTH2__TOKENENDPOINT: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
-#    depends_on:
-#      sqlapplicationmode-jobmanager:
-#        condition: service_healthy
+    depends_on:
+      sqlapplicationmode-jobmanager:
+        condition: service_healthy
 
   sqlapplicationmode-jobmanager:
     image: ${DOCKER_REGISTRY-}sqlapplicationmode-job
