--- a/.github/workflows/run-all-component-tests.yml
+++ b/.github/workflows/run-all-component-tests.yml
@@ -3,6 +3,10 @@ name: Run All Component Tests
 on:
   workflow_dispatch:
     inputs:
+      cheetah-flink-image-tag:
+        description: The image tag to use for the cheetah-flink image when running the component tests
+        required: false
+        default: latest
       development-infrastructure-ref:
         description: Which branch to run development infrastructure from
         required: false
