--- a/Observability/pom.xml
+++ b/Observability/pom.xml
@@ -49,7 +49,7 @@ under the License.
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>5.0.1</version>
+            <version>5.1.0-renovate-flink-flink-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
