--- a/TumblingWindow/pom.xml
+++ b/TumblingWindow/pom.xml
@@ -49,7 +49,7 @@ under the License.
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>5.0.1</version>
+            <version>5.0.2-release-v5-0-flink-1-18-1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
