--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -29,7 +29,7 @@ jobs:
           LINTER_RULES_PATH: "tools"
           VALIDATE_ALL_CODEBASE: true
           DISABLE: "COPYPASTE,SPELL"
-          DISABLE_LINTERS: "REPOSITORY_TRIVY,REPOSITORY_TRIVY_SBOM,REPOSITORY_GRYPE,SPELL_LYCHEE,JSON_JSONLINT"
+          DISABLE_LINTERS: "REPOSITORY_TRIVY,REPOSITORY_TRIVY_SBOM,REPOSITORY_GRYPE,SPELL_LYCHEE,JSON_JSONLINT,MARKDOWN_MARKDOWN_LINK_CHECK"
           EXCLUDED_DIRECTORIES: ".git,.github,.devcontainer,target,avrorecord"
           FILTER_REGEX_EXCLUDE: "catalog-info.yaml"
           JAVA_CHECKSTYLE_CONFIG_FILE: "checkstyle.xml"
