--- a/ExternalLookup/Dockerfile
+++ b/ExternalLookup/Dockerfile
@@ -31,7 +31,7 @@ RUN --mount=type=secret,id=GITHUB_TOKEN \
 #
 #  Install jar onto clean runtime system.
 #
-FROM ghcr.io/trifork/cheetah-flink:5.1.0-feature-unparsable-deserialization-handling-SNAPSHOT49-flink-1.18.1-java17
+FROM ghcr.io/trifork/cheetah-flink:5.1.0-flink-1.18.1-java17
 
 COPY --from=build /app/target/externallookup*.jar /opt/flink/usrlib/artifacts/externallookup.jar
 
