--- a/.github/workflows/run-all-component-tests.yml
+++ b/.github/workflows/run-all-component-tests.yml
@@ -54,7 +54,10 @@ jobs:
             initial-kafka-topics: "ObservabilityInputTopic"
             
           - folder: SerializationErrorCatch
-            initial-kafka-topics: "SerializationErrorCatchInputTopic SerializationErrorCatchInputTopic SerializationErrorCatchOutputTopic"
+            initial-kafka-topics: "SerializationErrorCatchInputTopic SerializationErrorCatchOutputTopic"
+
+          - folder: SerializationErrorSideOutput
+            initial-kafka-topics: "SerializationErrorSideOutputInputTopic SerializationErrorSideOutputOutputTopic SerializationErrorSideOutputOutputTopicUnParsed"
             
           - folder: TransformAndStore
             initial-kafka-topics: "TransformAndStoreInputTopic"
