--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -108,6 +108,13 @@ jobs:
           message: "[MegaLinter] Apply linters fixes"
           allow-empty: false
 
+      - name: Pull latest changes
+        if: ${{ steps.commit.outputs.commit || env.changes == 'true' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git pull origin ${{ github.head_ref || github.ref_name }} --rebase
+
       - name: Push changes
         if: ${{ steps.commit.outputs.commit || env.changes == 'true' }}
         env:
