--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -113,7 +113,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git pull origin ${{ github.head_ref || github.ref_name }} --rebase
+          git pull origin ${{ github.head_ref || github.ref_name }} --no-rebase
 
       - name: Push changes
         if: ${{ steps.commit.outputs.commit || env.changes == 'true' }}
