--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -6,9 +6,8 @@ name: MegaLinter
 on:
   workflow_dispatch:
   push:
-    branches: [main, "release/**", "renovate/**"]
+    branches: [main, "release/**"]
   pull_request:
-    branches: [main]
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
