--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -8,7 +8,8 @@ on:
   push:
     branches: [main, "release/**"]
   pull_request:
-    branches: [main, "release/**", "renovate/**"]
+    branches: [main, "release/**"]
+    types: [opened, synchronize, reopened, labeled]
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
