--- a/Observability/Dockerfile
+++ b/Observability/Dockerfile
@@ -31,7 +31,7 @@ RUN --mount=type=secret,id=GITHUB_TOKEN \
 #
 #  Install jar onto clean runtime system.
 #
-FROM ghcr.io/trifork/cheetah-flink:6.1.2-flink-1.20.0-java17
+FROM ghcr.io/trifork/cheetah-flink:6.2.0-main-SNAPSHOT93-flink-1.20.3-java17
 
 COPY --from=build /app/target/observability*.jar /opt/flink/usrlib/artifacts/observability.jar
 
