--- a/AvroToJson/pom.xml
+++ b/AvroToJson/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>6.2.0</version>
+            <version>6.2.0-RC.6.2.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
