--- a/JsonToAvro/pom.xml
+++ b/JsonToAvro/pom.xml
@@ -86,6 +86,21 @@ under the License.
             <version>${flink.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Kafka & Avro -->
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>4.1.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+            <version>8.0.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
